# game-of-life

./: README.md  game_of_life.c  game_of_life.cu  pyproject.toml
game_of_life/: game_of_life.py
