[tool.poetry]
name = "game-of-life"
version = "0.1.0"
description = ""
authors = ["Wian Stipp"]
readme = "README.md"
packages = [{include = "game_of_life"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
